package view;

import model.Account;
import model.Client;
import model.CurrentAccount;
import model.SavingsAccount;
import service.AccountService;
import service.ClientService;

import java.util.List;
import java.util.Scanner;

public class AccountView implements View{
    private final ClientService clientService;
    private final AccountService accountService;
    private final Scanner scanner;

    public AccountView(ClientService clientService,AccountService accountService, Scanner scanner) {
        this.clientService = clientService;
        this.accountService = accountService;
        this.scanner = scanner;
    }

    @Override
    public void display() {
        displayClientAccounts();
    }

    public void displayClientAccounts() {
        System.out.println("\n" + "=".repeat(60));
        System.out.println("                CLIENT ACCOUNTS");
        System.out.println("=".repeat(60));

        Long clientId = InputHelper.readLong(scanner, "Enter Client ID: ");
        Client client =  clientService.findClientById(clientId);

        System.out.println("\nClient: " + client.getName() + "\nEmail: " + client.getEmail());
        System.out.println("-".repeat(60));

        List<Account> accounts = accountService.getClientAccounts(clientId);

        if (accounts.isEmpty()) {
            System.out.println("No accounts found for this client");
        } else {
            printAccountsTables(accounts);
        }
    }

    public void printAccountsTables(List<Account> accounts) {
        System.out.printf("%-10s | %-10s | %-15s | %-20s%n",
                "Number", "Type", "Balance", "Details");
        System.out.println("-".repeat(60));

        for (Account account : accounts) {
            String details = getAccountDetails(account);

            System.out.printf("%-10s | %-10s | %,13.2f€ | %-20s%n",
                    account.getNumber(),
                    account.getType(),
                    account.getBalance(),
                    details
            );
        }
        System.out.println("=".repeat(60));
        System.out.println("Total accounts: " + accounts.size());
    }

    public String getAccountDetails(Account account) {
        if (account instanceof CurrentAccount currentAccount){
            return "Overdraft: " + String.format("%.0f€", currentAccount.getOverdraftLimit());
        } else if (account instanceof SavingsAccount savingsAccount) {
            return "Interest; " + String.format("%.2f%%", savingsAccount.getInterestRate());
        }
        return "";
    }

    public void displayBalance(){
        System.out.println("\n" + "=".repeat(60));
        System.out.println("            CHECK BALANCE");
        System.out.println("=".repeat(60));

        String accountNumber = InputHelper.readString(scanner, "Enter Account Number: ");
        double balance = accountService.getBalance(accountNumber);

        System.out.println("\nAccount: " + accountNumber);
        System.out.printf("Current balance: %,.2f€%n", balance);
        System.out.println("=".repeat(60));
    }
}
