@startuml TP_Bank

hide stereotype
skinparam shadowing true
skinparam linetype ortho

' Couleurs des packages
skinparam package {
    BackgroundColor PaleGreen
    BorderColor Black
    FontStyle bold
}
' Couleurs par package
skinparam package {
    BackgroundColor<<model>> LightBlue
    BackgroundColor<<database>> LightGreen
    BackgroundColor<<factory>> LightYellow
    BackgroundColor<<dao>> LightCoral
    BackgroundColor<<service>> LightSalmon
    BackgroundColor<<exception>> Pink
    BackgroundColor<<view>> Lavender
    BackgroundColor<<main>> LightGray
}

skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

' --------------------
' MODEL
package "Model" <<Model>>{
    class Client {
        - id: Long
        - name: String
        - email: String
        - phone: String
        - createdAt: LocalDateTime
    }

    abstract class Account {
        - id: Long
        - number: String
        - balance: double
        - clientId: Long
        - createdAt: LocalDateTime
        --
        + credit(amount: double): void
        + debit(amount: double): void
        + {abstract} getType(): String
    }

    class CurrentAccount {
        - overdraftLimit: double
        --
        + canWithdraw(amount: double): boolean
        + getType(): String
    }

    class SavingsAccount {
        - interestRate: double
        --
        + calculateInterest(): double
        + getType(): String
    }

    class Operation {
        - id: Long
        - type: String
        - amount: double
        - operationDate: LocalDateTime
        - accountId: Long
    }

    Client "1  " -down[bold]- "*" Account
    Account "1  " -[bold]- "*" Operation
    CurrentAccount -left-|> Account
    SavingsAccount -right-|> Account
}

' -------------------------
' DATABASE
package "Database" <<database>> {
    class DatabaseConnection <<Singleton>> {
        - {static} instance: DatabaseConnection
        - connection: Connection
        --
        + {static} getInstance(): DatabaseConnection
        + getConnection(): Connection
        + closeConnection(): void
    }
}

' ---------------------------
' FACTORY PACKAGE
package "Factory" <<factory>> {
    class AccountFactory {
        + {static} createAccount(type: String, id: Long,\n number: String, balance: double,\n clientId: Long): Account
    }
}

AccountFactory .right[bold,dashed,thickness=2].> Account : <<creates>>

' -------------------------------------
' DAO PACKAGE

package "DAO" <<dao>> {

    package "builder" #FFEEEE {
        class QueryBuilder {
            - query: StringBuilder
            - whereConditions: List<String>
            - orderByColumns: List<String>
            --
            + {static} select(columns: String...): QueryBuilder
            + {static} insert(table: String): QueryBuilder
            + {static} update(table: String): QueryBuilder
            + {static} delete(): QueryBuilder
            + from(table: String): QueryBuilder
            + where(condition: String): QueryBuilder
            + orderBy(columns: String...): QueryBuilder
            + build(): String
        }
    }

    class ClientDao {
        - connection: Connection
        - helper: MapResultSetHelper
        --
        + getAllClients(): List<Client>
        + findById(id: Long): Client
        + findByEmail(email: String): Client
    }

    class AccountDao {
        - connection: Connection
        - helper: MapResultSetHelper
        --
        + findAll(): List<Account>
        + findById(id: Long): Account
        + findByNumber(number: String): Account
        + findByClientId(clientId: Long): List<Account>
        + update(account: Account): void
    }

    class OperationDao {
        - connection: Connection
        - helper: MapResultSetHelper
        --
        + findAll(): List<Operation>
        + findByAccountId(accountId: Long): List<Operation>
        + save(operation: Operation): void
    }
}

' Relations DAO
ClientDao .right[bold,dashed,thickness=2].> DatabaseConnection
ClientDao ..> QueryBuilder
ClientDao .up[bold,dashed,thickness=2].> Client

AccountDao .right[bold,dashed,thickness=2].> DatabaseConnection
AccountDao .down.> QueryBuilder
AccountDao .left[bold,dashed,thickness=2].> AccountFactory

OperationDao .[bold,dashed,thickness=2].> DatabaseConnection
OperationDao .down.> QueryBuilder
OperationDao .up[bold,dashed,thickness=2].> Operation

' -------------------
' SERVICE PACKAGE

package "Service" <<service>> {
    class ClientService {
        - clientDao: ClientDao
        --
        + getAllClients(): List<Client>
        + findClientById(id: Long): Client
    }
    class AccountService{
        - accountDao: AccountDao
        - clientService: ClientService
        --
        + getClientsAccount(clientId: Long)
        + findAccountByNumber(accountNumber: String)
        + getBalance(accountNumber: String)
    }
    class OperationService{
        - operationDao: OperationDao
        - accountDao: AccountDao
        - accountService: AccountService
        + deposit(accountNumber: String,amount: double)
        + withdraw(accountNumber: String,amount: double)
        + displayAccountHistory(accountNumber: String)
    }
}

ClientService -[bold]-> ClientDao
AccountService -[bold]-> AccountDao
OperationService -[bold]-> OperationDao

' ------------------------
' EXCEPTION PACKAGE

package "Exception" <<exception>> {
    exception BusinessException {
        + BusinessException(message: String)
    }

    exception AccountNotFoundException {
        + AccountNotFoundException(message: String)
    }

    exception InsufficientBalanceException {
        + InsufficientBalanceException(message: String)
    }

    exception ClientNotFoundException{
        + ClientNotFoundException(message: String)
    }

    exception OperationNotFoundException {
        + OperationNotFoundException(message: String)
    }

    exception InvalidOperationException{
        + InvalidOperationException(message: String)
    }

    exception DatabaseConnectionException{
        + DatabaseConnectionException(message: String)
    }

    AccountNotFoundException -left|> BusinessException
    ClientNotFoundException -left-|> BusinessException
    InsufficientBalanceException -up-|> BusinessException
    OperationNotFoundException -up-|> BusinessException
    InvalidOperationException -up-|> BusinessException

}

AccountService .[bold,dashed,thickness=2].> BusinessException : <<throws>>
ClientService .[bold,dashed,thickness=2].> BusinessException : <<throws>>
OperationService .[bold,dashed,thickness=2].> BusinessException : <<throws>>
DatabaseConnection .right.> DatabaseConnectionException

' -------------------------------------
' VIEW PACKAGE
package "View" <<view>> {

    interface ViewInterface {
        + {abstract} display(): void
    }

    class ClientView {
        - clientService: ClientService
        - scanner: Scanner
        --
        + display(): void
        + displayAllClients(): void
        + displayClientDetails(clientId: Long): void
    }

    class AccountView {
        - clientService: ClientService
        - accountService: AccountService
        - scanner: Scanner
        --
        + display(): void
        + displayClientAccounts(): void
        + displayBalance(): void
    }

    class OperationView {
        - operationService: OperationService
        - scanner: Scanner
        --
        + display(): void
        + performDeposit(): void
        + performWithdrawal(): void
        + displayAccountHistory(): void
    }

    class MenuView {
        - scanner: Scanner
        - clientView: ClientView
        - accountView: AccountView
        - operationView: OperationView
        --
        + displayMainMenu(): void
        + getUserChoice(): int
        + handleChoice(choice: int): void
        + waitForUser(): void
    }
}

ClientView -up-|> ViewInterface
AccountView -up-|> ViewInterface
OperationView -up-|> ViewInterface

MenuView -left-> ClientView
MenuView -left-> AccountView
MenuView -left-> OperationView

ClientView -[bold]-> ClientService
AccountView -[bold]-> AccountService
OperationView -[bold]-> OperationService
AccountView -[bold]-> ClientService

' ------------------------------------
' MAIN
package "Main" <<main>> {
    class ConsoleApp <<Application>> {
        - {static} scanner: Scanner
        - {static} menuView: MenuView
        --
        + {static} main(args: String[]): void
    }
}

ConsoleApp -up[bold]-> MenuView
ConsoleApp -down[bold]-> AccountService
ConsoleApp -down[bold]-> ClientService
ConsoleApp -down[bold]-> OperationService



@enduml